# Server

./: .gitattributes  CMakeLists.txt  README.md
cmake/: DependencyHelperMSVC.cmake
common/: CMakeLists.txt  additive_lagged_fibonacci_engine.h  base_packet.cpp  base_packet.h  bazaar.cpp  bazaar.h  bodytypes.cpp  bodytypes.h  classes.cpp  classes.h  compression.cpp  compression.h  condition.cpp  condition.h  crash.cpp  crash.h  crc16.cpp  crc16.h  crc32.cpp  crc32.h  data_bucket.cpp  data_bucket.h  database.cpp  database.h  database_conversions.cpp  database_instances.cpp  database_schema.h  dbcore.cpp  dbcore.h  deity.h  dynamic_zone_base.cpp  dynamic_zone_base.h  dynamic_zone_lockout.cpp  dynamic_zone_lockout.h  emu_constants.cpp  emu_constants.h  emu_limits.h  emu_opcodes.cpp  emu_opcodes.h  emu_oplist.h  (+159 more)
eqlaunch/: CMakeLists.txt  eqlaunch.cpp  worldserver.cpp  worldserver.h  zone_launch.cpp  zone_launch.h
loginserver/: CMakeLists.txt  account_management.cpp  account_management.h  client.cpp  client.h  client_manager.cpp  client_manager.h  encryption.cpp  encryption.h  eq_crypto_api.h  login_server.h  login_types.h  loginserver_command_handler.cpp  loginserver_command_handler.h  loginserver_webserver.cpp  loginserver_webserver.h  main.cpp  options.h  world_server.cpp  world_server.h  world_server_manager.cpp  world_server_manager.h
queryserv/: CMakeLists.txt  database.cpp  database.h  lfguild.cpp  lfguild.h  queryserv.cpp  queryservconfig.cpp  queryservconfig.h  worldserver.cpp  worldserver.h  zonelist.cpp  zonelist.h  zoneserver.cpp  zoneserver.h
shared_memory/: CMakeLists.txt  items.cpp  items.h  main.cpp  spells.cpp  spells.h
tests/: CMakeLists.txt  atobool_test.h  data_verification_test.h  fixed_memory_test.h  fixed_memory_variable_test.h  hextoi_32_64_test.h  ipc_mutex_test.h  main.cpp  memory_mapped_file_test.h  skills_util_test.h  string_util_test.h  task_state_test.h
ucs/: CMakeLists.txt  chatchannel.cpp  chatchannel.h  clientlist.cpp  clientlist.h  database.cpp  database.h  ucs.cpp  ucsconfig.cpp  ucsconfig.h  worldserver.cpp  worldserver.h
world/: CMakeLists.txt  adventure.cpp  adventure.h  adventure_manager.cpp  adventure_manager.h  adventure_template.h  client.cpp  client.h  cliententry.cpp  cliententry.h  clientlist.cpp  clientlist.h  console.cpp  console.h  dynamic_zone.cpp  dynamic_zone.h  dynamic_zone_manager.cpp  dynamic_zone_manager.h  eqemu_api_world_data_service.cpp  eqemu_api_world_data_service.h  eql_config.cpp  eql_config.h  launcher_link.cpp  launcher_link.h  launcher_list.cpp  launcher_list.h  lfplist.cpp  lfplist.h  login_server.cpp  login_server.h  login_server_list.cpp  login_server_list.h  main.cpp  queryserv.cpp  queryserv.h  shared_task_manager.cpp  shared_task_manager.h  shared_task_world_messaging.cpp  shared_task_world_messaging.h  sof_char_create_data.h  (+26 more)
zone/: CMakeLists.txt  aa.cpp  aa.h  aa_ability.cpp  aa_ability.h  aa_rank.h  aa_rank_effects.h  aggro.cpp  aggromanager.cpp  aggromanager.h  api_service.cpp  api_service.h  attack.cpp  aura.cpp  aura.h  beacon.cpp  beacon.h  bonuses.cpp  bot.cpp  bot.h  bot_command.cpp  bot_command.h  bot_database.cpp  bot_database.h  bot_raid.cpp  bot_raid.h  bot_structs.h  botspellsai.cpp  cheat_manager.cpp  cheat_manager.h  client.cpp  client.h  client_bot.cpp  client_evolving_items.cpp  client_mods.cpp  client_packet.h  (+233 more)
zone/gm_commands/: CMakeLists.txt  acceptrules.cpp  advnpcspawn.cpp  aggrozone.cpp  ai.cpp  appearance.cpp  appearanceeffects.cpp  attack.cpp  augmentitem.cpp  ban.cpp  bugs.cpp  camerashake.cpp  castspell.cpp  charchange.cpp  chat.cpp  clearxtargets.cpp  completehealdelay.cpp  completehealthreshold.cpp  copycharacter.cpp  corpse.cpp  corpsefix.cpp  countitem.cpp  curedelay.cpp  cureminthreshold.cpp  curethreshold.cpp  damage.cpp  databuckets.cpp  dbspawn2.cpp  delacct.cpp  delpetition.cpp  depop.cpp  depopzone.cpp  devtools.cpp  disablerecipe.cpp  disarmtrap.cpp  doanim.cpp  door.cpp  door_manipulation.cpp  door_manipulation.h  dye.cpp  (+140 more)
zone/gm_commands/find/: find_aa.cpp  find_account.cpp  find_body_type.cpp  find_bot.cpp  find_bug_category.cpp  find_character.cpp  find_class.cpp  find_comparison_type.cpp  find_currency.cpp  find_deity.cpp  find_emote.cpp  find_faction.cpp  find_item.cpp  find_language.cpp  find_ldon_theme.cpp  find_npctype.cpp  find_object_type.cpp  find_race.cpp  find_recipe.cpp  find_skill.cpp  find_special_ability.cpp  find_spell.cpp  find_stance.cpp  find_task.cpp  find_zone.cpp
zone/gm_commands/set/: set_aa_exp.cpp  set_aa_points.cpp  set_adventure_points.cpp  set_alternate_currency.cpp  set_animation.cpp  set_anon.cpp  set_auto_login.cpp  set_bind_point.cpp  set_checksum.cpp  set_class_permanent.cpp  set_crystals.cpp  set_date.cpp  set_endurance.cpp  set_endurance_full.cpp  set_exp.cpp  set_flymode.cpp  set_frozen.cpp  set_gender.cpp  set_gender_permanent.cpp  set_gm.cpp  set_gm_speed.cpp  set_gm_status.cpp  set_god_mode.cpp  set_haste.cpp  set_hero_model.cpp  set_hide_me.cpp  set_hp.cpp  set_hp_full.cpp  set_invulnerable.cpp  set_language.cpp  set_last_name.cpp  set_level.cpp  set_loginserver_info.cpp  set_mana.cpp  set_mana_full.cpp  set_motd.cpp  set_name.cpp  set_ooc_mute.cpp  set_password.cpp  set_pvp.cpp  (+16 more)
zone/gm_commands/show/: show_aa_points.cpp  show_aas.cpp  show_aggro.cpp  show_auto_login.cpp  show_buffs.cpp  show_buried_corpse_count.cpp  show_client_version_summary.cpp  show_content_flags.cpp  show_currencies.cpp  show_distance.cpp  show_emotes.cpp  show_field_of_view.cpp  show_flags.cpp  show_group_info.cpp  show_hatelist.cpp  show_inventory.cpp  show_ip_lookup.cpp  show_keyring.cpp  show_line_of_sight.cpp  show_network.cpp  show_network_stats.cpp  show_npc_global_loot.cpp  show_npc_stats.cpp  show_npc_type.cpp  show_peqzone_flags.cpp  show_petition.cpp  show_petition_info.cpp  show_proximity.cpp  show_quest_errors.cpp  show_quest_globals.cpp  show_recipe.cpp  show_server_info.cpp  show_skills.cpp  show_spawn_status.cpp  show_special_abilities.cpp  show_spells.cpp  show_spells_list.cpp  show_stats.cpp  show_timers.cpp  show_traps.cpp  (+12 more)
(+754 files in other folders)
